--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,23 @@
 body {
     font-family: 'PT Sans', sans-serif!important;
-    
 }
 
 .text-slanted{
     font-family: 'Courgette', cursive!important; 
+    letter-spacing: 0.2rem;
 }
 
 .text-orange{
     color : #f15025;
-    letter-spacing: 0.5rem;
+    letter-spacing: 0.3rem;
+}
+
+.header-hero{
+    min-height: calc(100vh - 56px);
+    background: linear-gradient(rgba(0,0,0,0.2), rgba(0,0,0,0.2)), url('./images/homeBcg.jpeg') center/cover no-repeat;
+}
+
+.default-hero{
+    min-height: calc(100vh - 56px);
+    background: linear-gradient(rgba(0,0,0,0.2), rgba(0,0,0,0.2)), url('./images/defaultBcg.jpeg') center/cover no-repeat;
 }
